unpackaged/main/default/objects/Log_Setting__mdt/Log_Setting__mdt.object-meta.xml
<CustomObject>
    <description>Used for configuring log settings.</description>
    <label>Log Setting</label>
    <pluralLabel>Log Settings</pluralLabel>
</CustomObject>