unpackaged/main/default/objects/Log_Setting__mdt/fields/Data_Retention_Period_In_Days__c.field-meta.xml
<CustomField>
    <fullName>Data_Retention_Period_In_Days__c</fullName>
    <defaultValue>30</defaultValue>
    <description>Identifies the number of days to wait before archiving or deleting the data (log records)</description>
    <label>Data Retention Period (In Days)</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>