unpackaged/main/default/objects/Log_Setting__mdt/fields/Data_Strategy__c.field-meta.xml
<CustomField>
    <fullName>Data_Strategy__c</fullName>
    <description>Identifies the data strategy whether to archive or delete the Log record after specified period of time.</description>
    <label>Data Strategy</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Archive</fullName>
                <default>true</default>
                <label>Archive</label>
            </value>
            <value>
                <fullName>Delete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>