unpackaged/main/default/objects/Log_Setting__mdt/fields/Field_Set__c.field-meta.xml
<CustomField>
    <fullName>Field_Set__c</fullName>
    <description>Consists of comma separated api names of fields present on Log Big Object.</description>
    <label>Field Set</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>