unpackaged/main/default/objects/Log_Setting__mdt/fields/Logging_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Logging_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Controls creation of log records. Creates log records if set true.</description>
    <label>Logging Enabled</label>
    <type>Checkbox</type>
</CustomField>